--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -1,5 +1,17 @@
-.app {
+.CanvasApp {
+  text-align: center;
   display: flex;
-  flex-direction: column;
-  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background-color: #F3F4F6;
+  min-height: 100vh;
+  height: 100%;
+
+  .canvas {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
+  }
 }
