--- a/src/components/CanvasPanel/CanvasPanel.module.scss
+++ b/src/components/CanvasPanel/CanvasPanel.module.scss
@@ -1,5 +1,13 @@
 .CanvasPanel {
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
   width: 100%;
   height: 40px;
-  background-color: #E5E7EB;
+  padding: 0 4px;
+  background-color: #e5e7eb;
+}
+
+.backgroundBlue {
+  fill: #3076c5;
 }
