--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -1,17 +1,24 @@
 .CanvasApp {
-  text-align: center;
   display: flex;
-  align-items: center;
   justify-content: center;
-  background-color: #F3F4F6;
-  min-height: 100vh;
+  align-items: center;
   height: 100%;
+  min-height: 100vh;
+  column-gap: 12px;
+  background-color: #f3f4f6;
 
   .canvas {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    border-radius: 6px;
+    align-items: center;
+    box-shadow:
+      0 1px 3px 0 rgb(0 0 0 / 10%),
+      0 1px 2px 0 rgb(0 0 0 / 6%);
+  }
+
+  #canvas {
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
   }
 }
