--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -12,9 +12,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  .reactFlow {
+    width: 1140px;
+    height: 476px;
     box-shadow:
       0 1px 3px 0 rgb(0 0 0 / 10%),
       0 1px 2px 0 rgb(0 0 0 / 6%);
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
+    background-color: #fff;
   }
 
   #canvas {
