--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -7,26 +7,16 @@
   column-gap: 12px;
   background-color: #f3f4f6;
 
-  .canvas {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
   .reactFlow {
     width: 1140px;
     height: 476px;
+    margin: 0;
+    padding: 0;
     box-shadow:
       0 1px 3px 0 rgb(0 0 0 / 10%),
       0 1px 2px 0 rgb(0 0 0 / 6%);
     border-bottom-right-radius: 6px;
     border-bottom-left-radius: 6px;
     background-color: #fff;
-  }
-
-  #canvas {
-    border-bottom-right-radius: 6px;
-    border-bottom-left-radius: 6px;
   }
 }
